RESOLVED FIXED166440
TileGrid creates new cohorts even when not using temporarilyRetainTileCohorts mode
https://bugs.webkit.org/show_bug.cgi?id=166440
Summary TileGrid creates new cohorts even when not using temporarilyRetainTileCohorts...
Tim Horton
Reported 2016-12-22 15:13:15 PST
TileGrid creates new cohorts even when not using temporarilyRetainTileCohorts mode
Attachments
Patch (2.03 KB, patch)
2016-12-22 15:13 PST, Tim Horton
no flags
Tim Horton
Comment 1 2016-12-22 15:13:25 PST
WebKit Commit Bot
Comment 2 2016-12-22 15:53:28 PST
Comment on attachment 297681 [details] Patch Clearing flags on attachment: 297681 Committed r210121: <http://trac.webkit.org/changeset/210121>
WebKit Commit Bot
Comment 3 2016-12-22 15:53:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.