TileGrid creates new cohorts even when not using temporarilyRetainTileCohorts mode https://bugs.webkit.org/show_bug.cgi?id=166440

Reviewed by Simon Fraser.

No new tests.

* platform/graphics/ca/TileGrid.cpp:
(WebCore::TileGrid::revalidateTiles):
If we are not temporarily retaining unparented tile cohorts (e.g. on
iOS WebKit2), instead immediately removing all tiles that would go into
the new cohort, avoid starting the cohort at all.


Canonical link: https://commits.webkit.org/183725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210121 268f45cc-cd09-0410-ab3c-d52691b4dbfc